@@ -5,7 +5,9 @@ CHANGES
 3.10.0 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- On removal of a site, clear the bases of its site manager. This fixes a reference leak
+  from a parent site manager. See
+  `issue 1 <https://github.com/zopefoundation/zope.site/issues/1>`_.
 
 
 3.9.2 (2010-09-25)
